<resources>
    <string name="app_name">PYE</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">User Phone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_service_provider_details">ServiceProviderDetails</string>
    <string name="menu_view_orders">Booked Services</string>
    <string name="menu_cart">Cart</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="menu_sign_out">Sign Out</string>"
    <string name="title_activity_display">DisplayActivity</string>
    <string name="menu_service_list">ServiceProviders</string>
</resources>
